feat: centralização de conteudo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <center>  
     <h1> ola mundo! </h1>
     <p> flamengo </p>
+ </center>
 </body>
 </html>
