feat: texto inserido

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1> ola mundo! </h1>
     <p> flamengo </p>
     <p> são paulo vai levar um espanco </p>
+    <h2> tecnologia Avançada </h2>
  </center>
 </body>
 </html>
